# rsatu-algos-and-data-structures

./: .gitignore  LICENSE  README.md  algos.opam  dune-project
lib/: algos.ml  avl.ml  avl.mli  binary.ml  binary.mli  dune  dynamic.ml  fibonacci.ml  fibonacci.mli  monkey.ml  thanos.ml  thanos.mli
